1.新增mutex & semaphore api的錯誤回傳 2.修改swagger.yaml中 semaphore acquire & release 的method 和url
