# service/SemaphoreService.js
@@ -11,11 +11,8 @@ const uuid = require('uuid')
  * semaphoreHandle String check semaphore owner
  * returns Semaphore
  **/
-module.exports.acquire = function(semaphoreKey,semaphoreHandle) {
+module.exports.acquire = function (semaphoreKey, semaphoreHandle) {
   return lock_db.updateItem(semaphoreKey, semaphoreHandle, 1).then((data) => {
-    if (!data) {
-      return
-    }
     var examples = {};
     examples['application/json'] = {
       "count": data["count"],
@@ -37,11 +34,8 @@ module.exports.acquire = function(semaphoreKey,semaphoreHandle) {
  * semaphoreHandle String check semaphore owner
  * returns Semaphore
  **/
-module.exports.availablePermits = function(semaphoreKey,semaphoreHandle) {
+module.exports.availablePermits = function (semaphoreKey, semaphoreHandle) {
   return lock_db.readItem(semaphoreKey, semaphoreHandle).then((data) => {
-    if (!data) {
-      return;
-    }
     var examples = {};
     examples['application/json'] = {
       "count": data["count"],
@@ -63,14 +57,11 @@ module.exports.availablePermits = function(semaphoreKey,semaphoreHandle) {
  * capacity Capacity number of permits
  * returns Semaphore
  **/
-module.exports.creatSemaphore = function(semaphoreKey,capacity) {
+module.exports.creatSemaphore = function (semaphoreKey, capacity) {
   const semaphoreHandle = uuid.v4();
   const expiry = Date.now() / 1000 + 60;
   capacity = capacity["capacity"] || 5;
   return lock_db.createItem(semaphoreKey, semaphoreHandle, capacity, expiry).then((data) => {
-    if (!data) {
-      return
-    }
     var examples = {};
     examples['application/json'] = {
       "count": 0,
@@ -92,7 +83,7 @@ module.exports.creatSemaphore = function(semaphoreKey,capacity) {
  * semaphoreHandle String check semaphore owner
  * no response value expected for this operation
  **/
-module.exports.deleteSemaphore = function(semaphoreKey,semaphoreHandle) {
+module.exports.deleteSemaphore = function (semaphoreKey, semaphoreHandle) {
   return lock_db.deleteItem(semaphoreKey, semaphoreHandle).then(() => {
     return;
   });
@@ -108,11 +99,8 @@ module.exports.deleteSemaphore = function(semaphoreKey,semaphoreHandle) {
  * ttl Ttl update ttl
  * returns Semaphore
  **/
-module.exports.extendttl = function(semaphoreKey,semaphoreHandle,ttl) {
+module.exports.extendttl = function (semaphoreKey, semaphoreHandle, ttl) {
   return lock_db.updateItemttl(semaphoreKey, semaphoreHandle, ttl["ttl"]).then((data) => {
-    if (!data) {
-      return
-    }
     var examples = {};
     examples['application/json'] = {
       "count": data["count"],
@@ -134,11 +122,8 @@ module.exports.extendttl = function(semaphoreKey,semaphoreHandle,ttl) {
  * semaphoreHandle String check semaphore owner
  * returns Semaphore
  **/
-module.exports.releases = function(semaphoreKey,semaphoreHandle) {
+module.exports.releases = function (semaphoreKey, semaphoreHandle) {
   return lock_db.updateItem(semaphoreKey, semaphoreHandle, -1).then((data) => {
-    if (!data) {
-      return
-    }
     var examples = {};
     examples['application/json'] = {
       "count": data["count"],
@@ -150,4 +135,3 @@ module.exports.releases = function(semaphoreKey,semaphoreHandle) {
     return examples[Object.keys(examples)[0]];
   })
 }
-
